# mashiro

./: LICENSE  mashiro.cabal
app/: Main.hs
src/: Types.hs
