name:                mashiro
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Starecki
maintainer:          krzysztof.starecki@gmail.com
copyright:           2016 Krzysztof Starecki
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , classy-prelude
                     , http-client
                     , pretty-show
  default-language:    Haskell2010

executable mashiro-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , classy-prelude
                     , http-client
                     , http-client-tls
                     , mashiro
                     , mtl
                     , pretty-show
                     , regex-tdfa
                     , text
                     , unordered-containers
                     , websockets
                     , wuss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mashiro
